--- a/index.html
+++ b/index.html
@@ -1,1 +1,195 @@
+import React from 'react';
+import { motion } from 'framer-motion';
 
+// Revaiatt - Single File React Component (Tailwind CSS, RTL)
+// Default export component. Ready to paste into a React app that has Tailwind and Framer Motion installed.
+
+export default function RevaiattSinglePage() {
+  const brands = ['برند ۱','برند ۲','برند ۳','برند ۴','برند ۵'];
+  const skills = [
+    {icon:'🛠️', title:'طراحی داخلی', subtitle:'طراحی فضاهای مسکونی و تجاری'},
+    {icon:'🎬', title:'تولید محتوا', subtitle:'فیلم‌سازی کوتاه و تیزر'},
+    {icon:'📐', title:'نظارت فنی', subtitle:'نقشه‌خوانی و اجرای پروژه'},
+  ];
+  const projects = [
+    {title:'پروژه الف', text:'توضیح کوتاه درباره پروژه الف و نتایج حاصله.'},
+    {title:'پروژه ب', text:'توضیح کوتاه درباره پروژه ب و حوزه کاری.'}
+  ];
+  const testimonials = [
+    {name:'علی', text:'کاری حرفه‌ای و دقیق. همکاری مطلوب.'},
+    {name:'سمیه', text:'تحویل به موقع و با کیفیت.'}
+  ];
+
+  return (
+    <div className="min-h-screen bg-gray-50 text-gray-900 antialiased" dir="rtl">
+      {/* Header */}
+      <header className="bg-white shadow-sm sticky top-0 z-40">
+        <div className="container mx-auto px-4 py-4 flex items-center justify-between">
+          <div className="flex items-center gap-4">
+            <div className="w-12 h-12 bg-gray-200 rounded-full flex items-center justify-center font-bold">RV</div>
+            <div className="hidden sm:block">
+              <h1 className="text-lg font-semibold">Revaiatt</h1>
+              <p className="text-xs text-gray-500">سایت شخصی</p>
+            </div>
+          </div>
+          <nav className="flex gap-3 items-center">
+            <a href="#home" className="px-3 py-2 text-sm font-medium hover:text-indigo-600">صفحه اصلی</a>
+            <a href="#contact" className="px-3 py-2 text-sm font-medium hover:text-indigo-600">تماس با من</a>
+          </nav>
+        </div>
+      </header>
+
+      {/* Hero */}
+      <section id="home" className="container mx-auto px-4 py-20 text-center">
+        <motion.div initial={{opacity:0, y:20}} animate={{opacity:1, y:0}} transition={{duration:0.6}}>
+          <h2 className="text-3xl sm:text-4xl font-extrabold">سلام، من فلانی هستم</h2>
+          <p className="mt-4 text-lg text-gray-600">اینجا خلاصه‌ای از کاری که انجام می‌دم و شعاری کوتاه قرار می‌گیره.</p>
+          <div className="mt-6 flex justify-center gap-4">
+            <a href="#projects" className="px-4 py-2 bg-indigo-600 text-white rounded-lg shadow">نمونه کارها</a>
+            <a href="#contact" className="px-4 py-2 border border-indigo-600 text-indigo-600 rounded-lg">تماس</a>
+          </div>
+        </motion.div>
+      </section>
+
+      {/* Brand Logos (scrollable) */}
+      <section className="bg-white py-8">
+        <div className="container mx-auto px-4">
+          <div className="flex gap-6 overflow-x-auto items-center">
+            {brands.map((b,i)=> (
+              <div key={i} className="flex-shrink-0 w-36 h-12 bg-gray-100 rounded-md flex items-center justify-center text-sm">{b}</div>
+            ))}
+          </div>
+        </div>
+      </section>
+
+      {/* About */}
+      <section className="container mx-auto px-4 py-12">
+        <div className="grid grid-cols-1 md:grid-cols-3 gap-8 items-center">
+          <div className="md:col-span-2">
+            <h3 className="text-2xl font-bold">درباره من</h3>
+            <p className="mt-4 text-gray-600 leading-relaxed">اینجا متن دربارهٔ شما قرار می‌گیرد؛ داستان حرفه‌ای، مهارت‌ها و تجربه‌های کلیدی. می‌توانید لینک دانلود رزومه یا دکمه تماس فوری قرار دهید.</p>
+            <div className="mt-6 flex gap-3">
+              <a href="#contact" className="px-4 py-2 bg-indigo-600 text-white rounded">درخواست همکاری</a>
+              <a href="#portfolio" className="px-4 py-2 border rounded">دیدن نمونه‌کارها</a>
+            </div>
+          </div>
+          <div className="w-full">
+            <div className="w-full h-64 bg-gray-200 rounded-lg flex items-center justify-center">عکس شما</div>
+          </div>
+        </div>
+      </section>
+
+      {/* Skills / Services */}
+      <section className="bg-white py-12">
+        <div className="container mx-auto px-4">
+          <h3 className="text-2xl font-bold">تخصص‌ها و خدمات</h3>
+          <div className="mt-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+            {skills.map((s, i) => (
+              <motion.div key={i} className="p-6 rounded-xl bg-gray-50 shadow-sm" whileHover={{scale:1.02}}>
+                <div className="text-3xl">{s.icon}</div>
+                <h4 className="mt-3 font-semibold">{s.title}</h4>
+                <p className="mt-2 text-gray-600">{s.subtitle}</p>
+              </motion.div>
+            ))}
+          </div>
+        </div>
+      </section>
+
+      {/* Video portfolio (vertical videos) */}
+      <section className="container mx-auto px-4 py-12">
+        <h3 className="text-2xl font-bold">نمونه کارهای ویدیویی</h3>
+        <div className="mt-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+          {/* placeholder vertical videos */}
+          <div className="bg-gray-100 rounded-lg overflow-hidden">
+            <div className="aspect-[9/16] bg-black flex items-center justify-center text-white">ویدیو عمودی</div>
+            <div className="p-4">عنوان و توضیح کوتاه</div>
+          </div>
+          <div className="bg-gray-100 rounded-lg overflow-hidden">
+            <div className="aspect-[9/16] bg-black flex items-center justify-center text-white">ویدیو عمودی</div>
+            <div className="p-4">عنوان و توضیح کوتاه</div>
+          </div>
+        </div>
+      </section>
+
+      {/* Projects */}
+      <section id="projects" className="bg-white py-12">
+        <div className="container mx-auto px-4">
+          <h3 className="text-2xl font-bold">پروژه‌های انجام شده</h3>
+          <div className="mt-6 grid grid-cols-1 md:grid-cols-2 gap-6">
+            {projects.map((p,idx)=> (
+              <motion.article key={idx} initial={{opacity:0}} whileInView={{opacity:1}} viewport={{once:true}} className="p-6 bg-gray-50 rounded-lg">
+                <h4 className="font-semibold">{p.title}</h4>
+                <p className="mt-2 text-gray-600">{p.text}</p>
+              </motion.article>
+            ))}
+          </div>
+        </div>
+      </section>
+
+      {/* Certificates */}
+      <section className="container mx-auto px-4 py-12">
+        <h3 className="text-2xl font-bold">مدارک و دیپلم‌ها</h3>
+        <div className="mt-6 flex gap-4 flex-wrap">
+          <div className="w-48 h-32 bg-gray-100 rounded-md flex items-center justify-center">گواهی ۱</div>
+          <div className="w-48 h-32 bg-gray-100 rounded-md flex items-center justify-center">گواهی ۲</div>
+        </div>
+      </section>
+
+      {/* Another about-style section (text left, image right) */}
+      <section className="bg-white py-12">
+        <div className="container mx-auto px-4 grid grid-cols-1 md:grid-cols-3 gap-8 items-center">
+          <div className="md:col-span-2">
+            <h3 className="text-2xl font-bold">عنوان توضیحی</h3>
+            <p className="mt-4 text-gray-600">متن توضیحی مشابه بخش درباره من. اینجا می‌توانید تجربه‌های تخصصی‌تر یا داستان پروژه را بنویسید.</p>
+          </div>
+          <div className="w-full">
+            <div className="w-full h-64 bg-gray-200 rounded-lg flex items-center justify-center">عکس مرتبط</div>
+          </div>
+        </div>
+      </section>
+
+      {/* Image gallery */}
+      <section className="container mx-auto px-4 py-12">
+        <h3 className="text-2xl font-bold">نمونه کارهای تصویری</h3>
+        <div className="mt-6 grid grid-cols-2 sm:grid-cols-3 gap-4">
+          <div className="h-40 bg-gray-100 rounded-lg" />
+          <div className="h-40 bg-gray-100 rounded-lg" />
+          <div className="h-40 bg-gray-100 rounded-lg" />
+        </div>
+      </section>
+
+      {/* Testimonials */}
+      <section className="bg-white py-12">
+        <div className="container mx-auto px-4">
+          <h3 className="text-2xl font-bold">نظرات افراد</h3>
+          <div className="mt-6 grid grid-cols-1 sm:grid-cols-2 gap-4">
+            {testimonials.map((t,i)=> (
+              <div key={i} className="p-5 bg-gray-50 rounded-lg shadow-sm">
+                <p className="text-gray-700">"{t.text}"</p>
+                <p className="mt-3 text-sm font-semibold">{t.name}</p>
+              </div>
+            ))}
+          </div>
+        </div>
+      </section>
+
+      {/* Contact / Links */}
+      <section id="contact" className="container mx-auto px-4 py-12">
+        <h3 className="text-2xl font-bold">ارتباط با من</h3>
+        <p className="mt-3 text-gray-600">لینک‌های تماس و شبکه‌های اجتماعی:</p>
+        <div className="mt-4 flex flex-col sm:flex-row gap-3">
+          <a href="mailto:you@example.com" className="px-4 py-2 bg-indigo-600 text-white rounded">ایمیل</a>
+          <a href="#" className="px-4 py-2 border rounded">اینستاگرام</a>
+          <a href="#" className="px-4 py-2 border rounded">لینکدین</a>
+        </div>
+      </section>
+
+      {/* Footer */}
+      <footer className="bg-gray-900 text-gray-300 py-8 mt-12">
+        <div className="container mx-auto px-4 text-center">
+          <p className="text-sm">© تمامی حقوق برای Revaiatt محفوظ است.</p>
+        </div>
+      </footer>
+    </div>
+  );
+}
