--- a/index.html
+++ b/index.html
@@ -1,195 +1,146 @@
-import React from 'react';
-import { motion } from 'framer-motion';
+<!DOCTYPE html>
+<html lang="fa">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>سایت شخصی</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 
-// Revaiatt - Single File React Component (Tailwind CSS, RTL)
-// Default export component. Ready to paste into a React app that has Tailwind and Framer Motion installed.
+<body>
 
-export default function RevaiattSinglePage() {
-  const brands = ['برند ۱','برند ۲','برند ۳','برند ۴','برند ۵'];
-  const skills = [
-    {icon:'🛠️', title:'طراحی داخلی', subtitle:'طراحی فضاهای مسکونی و تجاری'},
-    {icon:'🎬', title:'تولید محتوا', subtitle:'فیلم‌سازی کوتاه و تیزر'},
-    {icon:'📐', title:'نظارت فنی', subtitle:'نقشه‌خوانی و اجرای پروژه'},
-  ];
-  const projects = [
-    {title:'پروژه الف', text:'توضیح کوتاه درباره پروژه الف و نتایج حاصله.'},
-    {title:'پروژه ب', text:'توضیح کوتاه درباره پروژه ب و حوزه کاری.'}
-  ];
-  const testimonials = [
-    {name:'علی', text:'کاری حرفه‌ای و دقیق. همکاری مطلوب.'},
-    {name:'سمیه', text:'تحویل به موقع و با کیفیت.'}
-  ];
+<!-- Header -->
+<header class="header">
+  <div class="logo">LOGO</div>
+  <nav class="nav">
+    <a href="#">صفحه اصلی</a>
+    <a href="#contact">تماس با من</a>
+  </nav>
+</header>
 
-  return (
-    <div className="min-h-screen bg-gray-50 text-gray-900 antialiased" dir="rtl">
-      {/* Header */}
-      <header className="bg-white shadow-sm sticky top-0 z-40">
-        <div className="container mx-auto px-4 py-4 flex items-center justify-between">
-          <div className="flex items-center gap-4">
-            <div className="w-12 h-12 bg-gray-200 rounded-full flex items-center justify-center font-bold">RV</div>
-            <div className="hidden sm:block">
-              <h1 className="text-lg font-semibold">Revaiatt</h1>
-              <p className="text-xs text-gray-500">سایت شخصی</p>
-            </div>
-          </div>
-          <nav className="flex gap-3 items-center">
-            <a href="#home" className="px-3 py-2 text-sm font-medium hover:text-indigo-600">صفحه اصلی</a>
-            <a href="#contact" className="px-3 py-2 text-sm font-medium hover:text-indigo-600">تماس با من</a>
-          </nav>
-        </div>
-      </header>
+<!-- Hero -->
+<section class="hero">
+  <h1>سلام من فلانی هستم</h1>
+  <p class="tagline">اینجا یک شعار کوتاه قرار می‌گیرد</p>
+</section>
 
-      {/* Hero */}
-      <section id="home" className="container mx-auto px-4 py-20 text-center">
-        <motion.div initial={{opacity:0, y:20}} animate={{opacity:1, y:0}} transition={{duration:0.6}}>
-          <h2 className="text-3xl sm:text-4xl font-extrabold">سلام، من فلانی هستم</h2>
-          <p className="mt-4 text-lg text-gray-600">اینجا خلاصه‌ای از کاری که انجام می‌دم و شعاری کوتاه قرار می‌گیره.</p>
-          <div className="mt-6 flex justify-center gap-4">
-            <a href="#projects" className="px-4 py-2 bg-indigo-600 text-white rounded-lg shadow">نمونه کارها</a>
-            <a href="#contact" className="px-4 py-2 border border-indigo-600 text-indigo-600 rounded-lg">تماس</a>
-          </div>
-        </motion.div>
-      </section>
+<!-- Brands -->
+<section class="brands">
+  <h2>همکاری با برندها</h2>
+  <div class="brand-logos">
+    <img src="brand1.png" alt="">
+    <img src="brand2.png" alt="">
+    <img src="brand3.png" alt="">
+    <img src="brand4.png" alt="">
+  </div>
+</section>
 
-      {/* Brand Logos (scrollable) */}
-      <section className="bg-white py-8">
-        <div className="container mx-auto px-4">
-          <div className="flex gap-6 overflow-x-auto items-center">
-            {brands.map((b,i)=> (
-              <div key={i} className="flex-shrink-0 w-36 h-12 bg-gray-100 rounded-md flex items-center justify-center text-sm">{b}</div>
-            ))}
-          </div>
-        </div>
-      </section>
+<!-- About -->
+<section class="about">
+  <div class="about-text">
+    <h2>درباره من</h2>
+    <p>اینجا متن درباره من قرار می‌گیرد...</p>
+  </div>
+  <div class="about-img">
+    <img src="me.jpg" alt="">
+  </div>
+</section>
 
-      {/* About */}
-      <section className="container mx-auto px-4 py-12">
-        <div className="grid grid-cols-1 md:grid-cols-3 gap-8 items-center">
-          <div className="md:col-span-2">
-            <h3 className="text-2xl font-bold">درباره من</h3>
-            <p className="mt-4 text-gray-600 leading-relaxed">اینجا متن دربارهٔ شما قرار می‌گیرد؛ داستان حرفه‌ای، مهارت‌ها و تجربه‌های کلیدی. می‌توانید لینک دانلود رزومه یا دکمه تماس فوری قرار دهید.</p>
-            <div className="mt-6 flex gap-3">
-              <a href="#contact" className="px-4 py-2 bg-indigo-600 text-white rounded">درخواست همکاری</a>
-              <a href="#portfolio" className="px-4 py-2 border rounded">دیدن نمونه‌کارها</a>
-            </div>
-          </div>
-          <div className="w-full">
-            <div className="w-full h-64 bg-gray-200 rounded-lg flex items-center justify-center">عکس شما</div>
-          </div>
-        </div>
-      </section>
-
-      {/* Skills / Services */}
-      <section className="bg-white py-12">
-        <div className="container mx-auto px-4">
-          <h3 className="text-2xl font-bold">تخصص‌ها و خدمات</h3>
-          <div className="mt-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-            {skills.map((s, i) => (
-              <motion.div key={i} className="p-6 rounded-xl bg-gray-50 shadow-sm" whileHover={{scale:1.02}}>
-                <div className="text-3xl">{s.icon}</div>
-                <h4 className="mt-3 font-semibold">{s.title}</h4>
-                <p className="mt-2 text-gray-600">{s.subtitle}</p>
-              </motion.div>
-            ))}
-          </div>
-        </div>
-      </section>
-
-      {/* Video portfolio (vertical videos) */}
-      <section className="container mx-auto px-4 py-12">
-        <h3 className="text-2xl font-bold">نمونه کارهای ویدیویی</h3>
-        <div className="mt-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-          {/* placeholder vertical videos */}
-          <div className="bg-gray-100 rounded-lg overflow-hidden">
-            <div className="aspect-[9/16] bg-black flex items-center justify-center text-white">ویدیو عمودی</div>
-            <div className="p-4">عنوان و توضیح کوتاه</div>
-          </div>
-          <div className="bg-gray-100 rounded-lg overflow-hidden">
-            <div className="aspect-[9/16] bg-black flex items-center justify-center text-white">ویدیو عمودی</div>
-            <div className="p-4">عنوان و توضیح کوتاه</div>
-          </div>
-        </div>
-      </section>
-
-      {/* Projects */}
-      <section id="projects" className="bg-white py-12">
-        <div className="container mx-auto px-4">
-          <h3 className="text-2xl font-bold">پروژه‌های انجام شده</h3>
-          <div className="mt-6 grid grid-cols-1 md:grid-cols-2 gap-6">
-            {projects.map((p,idx)=> (
-              <motion.article key={idx} initial={{opacity:0}} whileInView={{opacity:1}} viewport={{once:true}} className="p-6 bg-gray-50 rounded-lg">
-                <h4 className="font-semibold">{p.title}</h4>
-                <p className="mt-2 text-gray-600">{p.text}</p>
-              </motion.article>
-            ))}
-          </div>
-        </div>
-      </section>
-
-      {/* Certificates */}
-      <section className="container mx-auto px-4 py-12">
-        <h3 className="text-2xl font-bold">مدارک و دیپلم‌ها</h3>
-        <div className="mt-6 flex gap-4 flex-wrap">
-          <div className="w-48 h-32 bg-gray-100 rounded-md flex items-center justify-center">گواهی ۱</div>
-          <div className="w-48 h-32 bg-gray-100 rounded-md flex items-center justify-center">گواهی ۲</div>
-        </div>
-      </section>
-
-      {/* Another about-style section (text left, image right) */}
-      <section className="bg-white py-12">
-        <div className="container mx-auto px-4 grid grid-cols-1 md:grid-cols-3 gap-8 items-center">
-          <div className="md:col-span-2">
-            <h3 className="text-2xl font-bold">عنوان توضیحی</h3>
-            <p className="mt-4 text-gray-600">متن توضیحی مشابه بخش درباره من. اینجا می‌توانید تجربه‌های تخصصی‌تر یا داستان پروژه را بنویسید.</p>
-          </div>
-          <div className="w-full">
-            <div className="w-full h-64 bg-gray-200 rounded-lg flex items-center justify-center">عکس مرتبط</div>
-          </div>
-        </div>
-      </section>
-
-      {/* Image gallery */}
-      <section className="container mx-auto px-4 py-12">
-        <h3 className="text-2xl font-bold">نمونه کارهای تصویری</h3>
-        <div className="mt-6 grid grid-cols-2 sm:grid-cols-3 gap-4">
-          <div className="h-40 bg-gray-100 rounded-lg" />
-          <div className="h-40 bg-gray-100 rounded-lg" />
-          <div className="h-40 bg-gray-100 rounded-lg" />
-        </div>
-      </section>
-
-      {/* Testimonials */}
-      <section className="bg-white py-12">
-        <div className="container mx-auto px-4">
-          <h3 className="text-2xl font-bold">نظرات افراد</h3>
-          <div className="mt-6 grid grid-cols-1 sm:grid-cols-2 gap-4">
-            {testimonials.map((t,i)=> (
-              <div key={i} className="p-5 bg-gray-50 rounded-lg shadow-sm">
-                <p className="text-gray-700">"{t.text}"</p>
-                <p className="mt-3 text-sm font-semibold">{t.name}</p>
-              </div>
-            ))}
-          </div>
-        </div>
-      </section>
-
-      {/* Contact / Links */}
-      <section id="contact" className="container mx-auto px-4 py-12">
-        <h3 className="text-2xl font-bold">ارتباط با من</h3>
-        <p className="mt-3 text-gray-600">لینک‌های تماس و شبکه‌های اجتماعی:</p>
-        <div className="mt-4 flex flex-col sm:flex-row gap-3">
-          <a href="mailto:you@example.com" className="px-4 py-2 bg-indigo-600 text-white rounded">ایمیل</a>
-          <a href="#" className="px-4 py-2 border rounded">اینستاگرام</a>
-          <a href="#" className="px-4 py-2 border rounded">لینکدین</a>
-        </div>
-      </section>
-
-      {/* Footer */}
-      <footer className="bg-gray-900 text-gray-300 py-8 mt-12">
-        <div className="container mx-auto px-4 text-center">
-          <p className="text-sm">© تمامی حقوق برای Revaiatt محفوظ است.</p>
-        </div>
-      </footer>
+<!-- Services -->
+<section class="services">
+  <h2>تخصص‌ها و خدمات</h2>
+  <div class="service-list">
+    <div class="service-item">
+      <div class="icon">🎬</div>
+      <h3>عنوان خدمت</h3>
+      <p>توضیح کوتاه</p>
     </div>
-  );
-}
+
+    <div class="service-item">
+      <div class="icon">🖥️</div>
+      <h3>عنوان خدمت</h3>
+      <p>توضیح کوتاه</p>
+    </div>
+
+    <div class="service-item">
+      <div class="icon">🎧</div>
+      <h3>عنوان خدمت</h3>
+      <p>توضیح کوتاه</p>
+    </div>
+  </div>
+</section>
+
+<!-- Vertical Videos -->
+<section class="videos">
+  <h2>نمونه‌کار ویدیویی</h2>
+  <video src="sample1.mp4" controls></video>
+  <video src="sample2.mp4" controls></video>
+</section>
+
+<!-- Projects -->
+<section class="projects">
+  <h2>پروژه‌های انجام شده</h2>
+  <p>متنی درباره پروژه‌ها قرار می‌گیرد...</p>
+</section>
+
+<!-- Certificates -->
+<section class="certificates">
+  <h2>مدارک و دیپلم‌ها</h2>
+  <div class="cert-list">
+    <img src="cert1.jpg" alt="">
+    <img src="cert2.jpg" alt="">
+    <img src="cert3.jpg" alt="">
+  </div>
+</section>
+
+<!-- About 2 -->
+<section class="about second">
+  <div class="about-text">
+    <h2>درباره من (بخش دوم)</h2>
+    <p>اینجا متن بیشتر قرار می‌گیرد...</p>
+  </div>
+  <div class="about-img">
+    <img src="me2.jpg" alt="">
+  </div>
+</section>
+
+<!-- Image Samples -->
+<section class="images">
+  <h2>نمونه‌کار تصویری</h2>
+  <div class="img-row">
+    <img src="img1.jpg">
+    <img src="img2.jpg">
+    <img src="img3.jpg">
+  </div>
+</section>
+
+<!-- Testimonials -->
+<section class="testimonials">
+  <h2>نظرات</h2>
+  <div class="testi-item">
+    <p>همکاری عالی و حرفه‌ای...</p>
+    <span>نام فرد</span>
+  </div>
+  <div class="testi-item">
+    <p>کیفیت عالی...</p>
+    <span>نام فرد</span>
+  </div>
+</section>
+
+<!-- Contact -->
+<section id="contact" class="contact">
+  <h2>راه‌های ارتباطی</h2>
+  <div class="socials">
+    <a href="#">اینستاگرام</a>
+    <a href="#">تلگرام</a>
+    <a href="#">ایمیل</a>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer class="footer">
+  <p>تمام حقوق محفوظ است</p>
+</footer>
+
+</body>
+</html>
